[package]
name = "raylib-sys"
version = "4.0.0"
authors = ["DeltaPHC <phclem@protonmail.com>"]
license = "Zlib"
description = "Raw FFI bindings for Raylib"
documentation = "https://docs.rs/raylib-sys"
repository = "https://github.com/deltaphc/raylib-rs"
keywords = ["bindings", "raylib", "gamedev", "ffi"]
categories = ["external-ffi-bindings"]
edition = "2018"
exclude = [
    "raylib/examples/*",
    "raylib/projects/*",
    "raylib/templates/*"
]

[build-dependencies]
bindgen = "0.59.2"
fs_extra = "1.1"
cmake = "0.1.35"
cc = "1.0"


[features]
default = []
# Build Raylib headless for docs. Up to you to link
nobuild = []
