[package]
name = "raylib-sys"
version = "5.5.2"
authors = ["raylib-rs team <https://github.com/raylib-rs/raylib-rs>"]
license = "Zlib"
description = "Raw FFI bindings for Raylib"
documentation = "https://docs.rs/raylib-sys"
repository = "https://github.com/raylib-rs/raylib-rs"
keywords = ["bindings", "raylib", "gamedev", "ffi"]
categories = ["external-ffi-bindings"]
edition = "2021"
exclude = ["raylib/examples/*", "raylib/projects/*", "raylib/templates/*"]

[dependencies]
imgui = { version = "0.12.0", optional = true, features = [] }
imgui-sys = { version = "0.12.0", optional = true }

[build-dependencies]
cmake = "0.1.51"
cc = { version = "1.0", features = ["parallel"]}
bindgen = "0.70"

[features]
# default features follow the cmake version: https://github.com/raysan5/raylib/wiki/CMake-Build-Options
# NOTE: some are critical, e.g: SUPPORT_STANDARD_FILEIO should always be turned on because many things like `LoadShader()` uses it to read text
default = [
  "bindgen",
  "GLFW_BUILD_X11",
  "USE_AUDIO",
  "SUPPORT_MODULE_RSHAPES",
  "SUPPORT_MODULE_RTEXTURES",
  "SUPPORT_MODULE_RTEXT",
  "SUPPORT_MODULE_RMODELS",
  "SUPPORT_MODULE_RAUDIO",
  "SUPPORT_CAMERA_SYSTEM",
  "SUPPORT_GESTURES_SYSTEM",
  "SUPPORT_RPRAND_GENERATOR",
  "SUPPORT_MOUSE_GESTURES",
  "SUPPORT_SSH_KEYBOARD_RPI",
  "SUPPORT_WINMM_HIGHRES_TIMER",
  "SUPPORT_SCREEN_CAPTURE",
  "SUPPORT_GIF_RECORDING",
  "SUPPORT_COMPRESSION_API",
  "SUPPORT_AUTOMATION_EVENTS",
  "SUPPORT_CLIPBOARD_IMAGE",
  "SUPPORT_QUADS_DRAW_MODE",
  "SUPPORT_FILEFORMAT_PNG",
  "SUPPORT_FILEFORMAT_GIF",
  "SUPPORT_FILEFORMAT_QOI",
  "SUPPORT_FILEFORMAT_DDS",
  "SUPPORT_IMAGE_EXPORT",
  "SUPPORT_IMAGE_GENERATION",
  "SUPPORT_IMAGE_MANIPULATION",
  "SUPPORT_DEFAULT_FONT",
  "SUPPORT_FILEFORMAT_TTF",
  "SUPPORT_FILEFORMAT_FNT",
  "SUPPORT_TEXT_MANIPULATION",
  "SUPPORT_FONT_ATLAS_WHITE_REC",
  "SUPPORT_FILEFORMAT_OBJ",
  "SUPPORT_FILEFORMAT_MTL",
  "SUPPORT_FILEFORMAT_IQM",
  "SUPPORT_FILEFORMAT_GLTF",
  "SUPPORT_FILEFORMAT_VOX",
  "SUPPORT_FILEFORMAT_M3D",
  "SUPPORT_MESH_GENERATION",
  "SUPPORT_FILEFORMAT_WAV",
  "SUPPORT_FILEFORMAT_OGG",
  "SUPPORT_FILEFORMAT_MP3",
  "SUPPORT_FILEFORMAT_QOA",
  "SUPPORT_FILEFORMAT_XM",
  "SUPPORT_FILEFORMAT_MOD",
  "SUPPORT_STANDARD_FILEIO",
  "SUPPORT_TRACELOG",
]
raygui = []
# Generate bindings automatically.
# You can turn this off if you wanna go into the source and put in your own bindings.rs, which is
# useful since bindgen doesn't work on esoteric platforms.
bindgen = []
imgui = ["dep:imgui", "dep:imgui-sys"]


# ----- Copy and paste these from `raylib-sys` for easier maintance
# Build Raylib headless for docs/esoteric platforms. Up to you to link.
nobuild = []

# OpenGL stuff, intended for fixing #122
opengl_11 = [] # buggy? might not work with wayland
opengl_21 = []
opengl_33 = []
opengl_43 = []
opengl_es_20 = []
opengl_es_30 = []
sdl = []
wayland = []

# extra build profiles:
release_with_debug_info = []
min_size_rel = []

ENABLE_ASAN = []
ENABLE_UBSAN = []
ENABLE_MSAN = []
WITH_PIC = []
BUILD_SHARED_LIBS = []
USE_EXTERNAL_GLFW = []
GLFW_BUILD_WAYLAND = []
GLFW_BUILD_X11 = []
INCLUDE_EVERYTHING = []

USE_AUDIO = []
SUPPORT_MODULE_RSHAPES  = []
SUPPORT_MODULE_RTEXTURES = []
SUPPORT_MODULE_RTEXT = []
SUPPORT_MODULE_RMODELS = []
SUPPORT_MODULE_RAUDIO = []
SUPPORT_BUSY_WAIT_LOOP = []
SUPPORT_CAMERA_SYSTEM = []
SUPPORT_GESTURES_SYSTEM = []
SUPPORT_RPRAND_GENERATOR = []
SUPPORT_MOUSE_GESTURES = []
SUPPORT_SSH_KEYBOARD_RPI = []
SUPPORT_WINMM_HIGHRES_TIMER = []
SUPPORT_PARTIALBUSY_WAIT_LOOP = []
SUPPORT_GIF_RECORDING = []
SUPPORT_COMPRESSION_API = []
SUPPORT_AUTOMATION_EVENTS = []
SUPPORT_CUSTOM_FRAME_CONTROL = []
SUPPORT_CLIPBOARD_IMAGE = []
SUPPORT_QUADS_DRAW_MODE = []
SUPPORT_FILEFORMAT_PNG = []
SUPPORT_FILEFORMAT_BMP = []
SUPPORT_FILEFORMAT_TGA = []
SUPPORT_FILEFORMAT_JPG = []
SUPPORT_FILEFORMAT_GIF = []
SUPPORT_FILEFORMAT_QOI = []
SUPPORT_FILEFORMAT_PSD = []
SUPPORT_FILEFORMAT_DDS = []
SUPPORT_FILEFORMAT_HDR = []
SUPPORT_FILEFORMAT_PIC = []
SUPPORT_FILEFORMAT_KTX = []
SUPPORT_FILEFORMAT_ASTC = []
SUPPORT_FILEFORMAT_PKM = []
SUPPORT_FILEFORMAT_PVR = []
SUPPORT_IMAGE_EXPORT = []
SUPPORT_IMAGE_GENERATION = []
SUPPORT_IMAGE_MANIPULATION = []
SUPPORT_DEFAULT_FONT = []
SUPPORT_FILEFORMAT_TTF = []
SUPPORT_FILEFORMAT_FNT = []
SUPPORT_FILEFORMAT_BDF = []
SUPPORT_TEXT_MANIPULATION = []
SUPPORT_FONT_ATLAS_WHITE_REC = []
SUPPORT_FILEFORMAT_OBJ = []
SUPPORT_FILEFORMAT_MTL = []
SUPPORT_FILEFORMAT_IQM = []
SUPPORT_FILEFORMAT_GLTF = []
SUPPORT_FILEFORMAT_VOX = []
SUPPORT_FILEFORMAT_M3D = []
SUPPORT_MESH_GENERATION = []
SUPPORT_FILEFORMAT_WAV = []
SUPPORT_FILEFORMAT_OGG = []
SUPPORT_FILEFORMAT_MP3 = []
SUPPORT_FILEFORMAT_QOA = []
SUPPORT_FILEFORMAT_FLAC = []
SUPPORT_FILEFORMAT_XM = []
SUPPORT_FILEFORMAT_MOD = []
SUPPORT_STANDARD_FILEIO = []
SUPPORT_TRACELOG = []
SUPPORT_SCREEN_CAPTURE = []
SUPPORT_VR_SIMULATOR = []
SUPPORT_DISTORTION_SHADER = []
SUPPORT_FONT_TEXTURE = []