[package]
name = "raylib-test"
version = "5.5.0"
authors = ["raylib-rs team <https://github.com/raylib-rs/raylib-rs>"]
edition = "2018"
license = "Zlib"
readme = "../README.md"
repository = "https://github.com/raylib-rs/raylib-rs"

[dependencies]
raylib = { version = "5.5.0", path = "../raylib" }
raylib_sys = { version = "5.5.0", path = "../raylib-sys" }
lazy_static = "1.2.0"
colored = "2.1.0"

[features]
custom_frame_control = ["raylib/custom_frame_control"]
automation_event_test = []
