[package]
name = "raylib-test"
version = "5.5.1"
authors = ["raylib-rs team <https://github.com/raylib-rs/raylib-rs>"]
edition = "2024"
license = "Zlib"
readme = "../README.md"
repository = "https://github.com/raylib-rs/raylib-rs"

[dependencies]
raylib = { version = "5.7.0", path = "../raylib" }
raylib_sys = { version = "5.7.0", path = "../raylib-sys" }
lazy_static = "1.2.0"
colored = "1.9.1"

[features]
SUPPORT_CUSTOM_FRAME_CONTROL = ["raylib/SUPPORT_CUSTOM_FRAME_CONTROL"]
automation_event_test = []
