[package]
name = "raylib"
version = "5.1.0"
authors = ["DeltaPHC <phclem@protonmail.com>"]
license = "Zlib"
readme = "../README.md"
description = "Safe Rust bindings for Raylib."
documentation = "https://docs.rs/raylib"
repository = "https://github.com/raylib-rs/raylib-rs"
keywords = ["bindings", "raylib", "gamedev"]
categories = ["api-bindings", "game-engines", "graphics"]
edition = "2018"
autoexamples = false

[dependencies]
raylib-sys = { version = "5.1.0", path = "../raylib-sys" }
libc = "0.2.45"
lazy_static = "1.2.0"
cfg-if = "1.0.0"
serde = { version = "1.0.125", features = ["derive"], optional = true }
serde_json = { version = "1.0.64", optional = true }
nalgebra = { version = "0.26", optional = true }
specs-derive = "0.4.1"

[dev-dependencies]
structopt = "0.3"
rand = "0.8.5"
arr_macro = "0.1.3"

[dependencies.specs]
version = "0.16.1"
default-features = false

[features]
nightly = []
with_serde = ["serde", "serde_json"]
nalgebra_interop = ["nalgebra"]
wayland = ["raylib-sys/wayland"]
custom_frame_control = ["raylib-sys/custom_frame_control"]
opengl_33 = ["raylib-sys/opengl_33"]
opengl_21 = ["raylib-sys/opengl_21"]
opengl_es_20 = ["raylib-sys/opengl_es_20"]

[[example]]
name = "specs"
path = "examples/samples/specs.rs"
doc-scrape-examples = true

[[example]]
name = "rgui"
path = "examples/samples/rgui.rs"
doc-scrape-examples = true

[[example]]
name = "arkanoid"
path = "examples/samples/arkanoid.rs"
doc-scrape-examples = true

[[example]]
name = "logo"
path = "examples/samples/logo.rs"
doc-scrape-examples = true


[[example]]
name = "camera2D"
path = "examples/samples/camera2D.rs"
doc-scrape-examples = true

[[example]]
name = "raymarch"
path = "examples/samples/raymarch.rs"
doc-scrape-examples = true

[[example]]
name = "font"
path = "examples/samples/font.rs"
doc-scrape-examples = true

[[example]]
name = "drop"
path = "examples/samples/drop.rs"
doc-scrape-examples = true

[[example]]
name = "texture"
path = "examples/samples/texture.rs"
doc-scrape-examples = true

[[example]]
name = "yaw_pitch_roll"
path = "examples/samples/yaw_pitch_roll.rs"
doc-scrape-examples = true

[[example]]
name = "roguelike"
path = "examples/samples/roguelike.rs"
required-features = ["with_serde"]
doc-scrape-examples = true

[[example]]
name = "input"
path = "examples/samples/input.rs"
doc-scrape-examples = true

[[example]]
name = "3d_camera_first_person"
path = "examples/samples/3d_camera_first_person.rs"
doc-scrape-examples = true

[[example]]
name = "model_shader"
path = "examples/samples/model_shader.rs"
doc-scrape-examples = true

[[example]]
name = "extensions"
path = "examples/samples/extensions.rs"
doc-scrape-examples = true

[[example]]
name = "asteroids"
path = "examples/samples/asteroids.rs"
doc-scrape-examples = true

[[example]]
name = "floppy"
path = "examples/samples/floppy.rs"
doc-scrape-examples = true

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
