[package]
name = "raylib-examples"
version = "1.0.0"
authors = ["David Ayeke"]
edition = "2018"
license = "Zlib"
readme = "../README.md"
repository = "https://github.com/deltaphc/raylib-rs"


[dependencies]
raylib = { version = "1.0", path = "../raylib" }
structopt = "0.2"
specs-derive = "0.4"
legion = "0.2.1"
rand = "0.3.9"
tcod = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.specs]
version = "0.14"
default-features = false

[[bin]]
name = "specs"
path = "./specs.rs"

[[bin]]
name = "arkanoid"
path = "./arkanoid.rs"

[[bin]]
name = "logo"
path = "./logo.rs"

[[bin]]
name = "rgui"
path = "./rgui.rs"

[[bin]]
name = "rgui-button"
path = "./rgui_button.rs"

[[bin]]
name = "file"
path = "./file.rs"

[[bin]]
name = "camera2D"
path = "./camera2D.rs"

[[bin]]
name = "raymarch"
path = "./raymarch.rs"

[[bin]]
name = "font"
path = "./font.rs"

[[bin]]
name = "drop"
path = "./drop.rs"

[[bin]]
name = "texture"
path = "./texture.rs"

[[bin]]
name = "yaw_pitch_roll"
path = "yaw_pitch_roll.rs"

[[bin]]
name = "roguelike"
path = "roguelike.rs"

[[bin]]
name = "input"
path = "input.rs"

[[bin]]
name = "platformer"
path = "platformer.rs"