[package]
name = "raylib-showcase"
version = "5.5.0"
authors = ["raylib-rs team <https://github.com/raylib-rs/raylib-rs>"]
edition = "2018"
license = "Zlib"
readme = "../README.md"
repository = "https://github.com/raylib-rs/raylib-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raylib = { version = "5.5.0", path = "../raylib" }
